Fix: adjust font size in car list for improved readability

--- a/backend/src/assets/css/car-list.css
+++ b/backend/src/assets/css/car-list.css
@@ -188,7 +188,7 @@ section.car-list article div.car-info div.car-info-header div.name {
   padding: 0 11px;
   pointer-events: none;
 
-  font-size: 1.8em;
+  font-size: 1.4em;
   font-weight: 700;
   text-size-adjust: none;
   line-height: 1.3em;
